fix: grafiek, dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,15 @@
 :root {
     --white: white;
     --dark: #212427;
-    --text-color: #212121;
+    --text-color: #212427;
     --accent-color: #2badad;
     --btn-cell-color: white;
     --background-color: white;
+    --bold-text-color: #2badad;
+    --scrollbarTrack-color: #f1f1f1;
+    --popupcontent-color: white;
+    --searchBar-color: #212427;
+    --hover-color: #2badad;
 
     --shadow-color: 0deg 0% 0%;
     --shadow-elevation-low:
@@ -37,13 +42,13 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+    background: var(--scrollbarTrack-color);
     border-radius: 50px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #888;
+    background: var(--accent-color);
     border-radius: 50px;
 }
 
@@ -89,20 +94,19 @@ body {
 
 .c-search-container{
     position: relative;
-   border: 2px solid var(--dark);
+   border: 2px solid var(--searchBar-color);
    height: 50px;
    display: flex;
     align-items: center;
     border-radius: 10px;
 }
 
-.c-search-container:hover {
+.c-search-container:hover{
     transform: scale(1.01);
-    border: 2px solid var(--accent-color);
+    border: 2px solid var(--hover-color);
 }
 
 .c-search-container::selection {
-    --dark: red;
 }
 
 .c-search{
@@ -113,6 +117,7 @@ body {
     /* position: relative; */
     border: none;
     background-color: transparent;
+    color: var(--text-color)
 }
 
 input.c-search:focus{
@@ -124,7 +129,7 @@ input.c-search:focus{
     top: center;
     right: center;
     /* transform: translateY(-50%); */
-    color: var(--dark);
+    color: var(--searchBar-color);
 }
 
 .material-icons.md-40 {
@@ -136,7 +141,7 @@ input.c-search:focus{
 }
 
 .material-icons.md-40:hover {
-    color: var(--accent-color);
+    color: var(--hover-color);
 }
 
 button.c-btn{
@@ -250,7 +255,7 @@ button.c-btn:focus{
 .c-popup-content {
     width: 50vw;
     height: 40vh;
-    background-color: white;
+    background-color: var(--background-color);
     border-radius: 10px;
     text-align: center;
     padding: 10px;
@@ -261,7 +266,7 @@ button.c-btn:focus{
     opacity: 0;
     transform: scale(0);
     transition: .2s ease opacity, .2s ease transform;
-
+    color: var(--text-color);
 }
 
 .c-close{
@@ -425,7 +430,16 @@ button.c-btn-cell:focus{
         opacity: 1;
     }
 }
+
+
+.c-b-counter{
+    color:var(--bold-text-color);
+}
+
 @media (min-width: 320px) {
+    .c-content-cell {
+        min-height: 135px;
+    }
     .c-container {
             width: 100vw;
             height: 72vh;
@@ -492,7 +506,6 @@ button.c-btn-cell:focus{
     .c-popup-content {
         width: 90vw;
         height: 50vh;
-        background-color: white;
         border-radius: 10px;
         text-align: center;
         padding: 10px;
@@ -632,6 +645,9 @@ button.c-btn-cell:focus{
 }
 
 @media (min-width: 768px) {
+    .c-content-cell {
+            min-height: 90px;
+        }
     .canvas {
         grid-template-columns: 1fr 1fr 1fr;
     }
@@ -724,6 +740,7 @@ button.c-btn-cell:focus{
     }
     .c-counter {
         /* left: 8vw; */
+        color: var(--text-color);
         display: block;
     }
 
